--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <div class="mb-4">
             <img src="./assets/img/logo.png" class="logo-temp img-fluid mb-5"
               style="z-index: 3;">
-            <h1 class="text-capitalize mt-5" style="margin-bottom: 30px;">SLERF DOG WHIF HAT</h1>
-            <p style="color: #fff; font-weight: 600;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius beatae veniam ipsam voluptatum, voluptatem aut molestiae quidem voluptates eaque, adipisci impedit mollitia quas explicabo id deleniti, ratione cum natus!</p>
+            <h1 class="text-capitalize mt-5" style="margin-bottom: 30px;">Tosa Inu: The Samurai Guardian Dog</h1>
+            <p style="color: #fff; font-weight: 600;">In a realm where legends rise, Tosa Inu emerges—the mythical samurai dog of the memecoin world. Born from tales of honor and strength, Tosa Inu is no ordinary token; it’s a symbol of power, resilience, and unwavering loyalty. As the guardian of your digital fortunes, Tosa Inu leads the charge, protecting your assets with the spirit of a legendary warrior. Embrace the power of Tosa Inu, and let the samurai legacy guide you in the world of memecoins.</p>
             <!-- <div  style = "margin-top: 40px;">
                         <div class = "d-flex">
                             <div style = "flex:1" class = "pr-2">
@@ -125,7 +125,7 @@
                     <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_qj6py3un.json" class="img-am"
                       background="transparent" speed="1" autoplay></lottie-player>
                   </div>
-                  <h2 class="theme" style="font-weight: 600; color: #fff;">Anti-Whale</h2>
+                  <h2 class="theme" style="font-weight: 600; color: #fff;">0/0 Tax</h2>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 pb-5 text-center" data-aos="fade-up" data-aos-delay="500">
@@ -134,7 +134,7 @@
                     <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_n7kzkgjp.json" class="img-am"
                       background="transparent" speed="1" loop autoplay></lottie-player>
                   </div>
-                  <h2 class="theme" style="font-weight: 600; color: #fff;">Anti-Bot</h2>
+                  <h2 class="theme" style="font-weight: 600; color: #fff;">Contract Renounced</h2>
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 pb-5 text-center" data-aos="fade-up" data-aos-delay="800">
@@ -143,7 +143,7 @@
                     <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_3anincg1.json" class="img-am"
                       background="transparent" speed="1" loop autoplay></lottie-player>
                   </div>
-                  <h2 class="theme" style="font-weight: 600; color: #fff;">Locked Liquidity</h2>
+                  <h2 class="theme" style="font-weight: 600; color: #fff;">Liquidity Locked</h2>
                 </div>
               </div>
             </div>
