--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
                 <div style="flex: 1" class="pr-2">
                   <a href="https://t.me/aoycr">
                     <button data-aos="fade-up" data-aos-delay="1500" class="btn w-100 px-3 py-2 text-black"
-                    style="font-weight: 600; background: transparent; color: #fff; border: 2px solid #EC7809; font-weight: 700;">Telegram</button>
+                    style="font-weight: 600; background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Telegram</button>
                   </a>
                 </div>
                 <div style="flex: 1" class="px-2">
                   <a href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0xB7Fe8db756f80f5d1dCc369dD15B12cC26aE4CC3"><button data-aos="fade-up" data-aos-delay="1700" class="w-100 px-3 text-black py-2"
-                      style="background: transparent; color: #fff; border: 2px solid #EC7809; font-weight: 700;">Buy $SHIB</button></a>
+                      style="background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Buy $SHIB</button></a>
                 </div>
                 <div style="flex: 1" class="px-2">
                   <a href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0xB7Fe8db756f80f5d1dCc369dD15B12cC26aE4CC3"><button data-aos="fade-up" data-aos-delay="1700" class="w-100 px-3 text-black py-2"
-                      style="background: transparent; color: #fff; border: 2px solid #EC7809; font-weight: 700;">Buy $SHIb</button></a>
+                      style="background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Buy $SHIb</button></a>
                 </div>
               </div>
             </div>
