--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Container wrapper -->
         <!-- Navbar brand -->
         <a class="navbar-brand" href="#">
-          <img src="./assets/img/logo.png" style="width: 40px; height: auto;vertical-align: middle;" alt=""> Shib
+          <img src="./assets/img/logo.png" style="width: 40px; height: auto;vertical-align: middle;" alt=""> Tosa Inu
         </a>
   
         <!-- Toggle button -->
@@ -100,11 +100,11 @@
                 </div>
                 <div style="flex: 1" class="px-2">
                   <a href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0xB7Fe8db756f80f5d1dCc369dD15B12cC26aE4CC3"><button data-aos="fade-up" data-aos-delay="1700" class="w-100 px-3 text-black py-2"
-                      style="background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Buy $SHIB</button></a>
+                      style="background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Buy $TOSA</button></a>
                 </div>
                 <div style="flex: 1" class="px-2">
                   <a href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0xB7Fe8db756f80f5d1dCc369dD15B12cC26aE4CC3"><button data-aos="fade-up" data-aos-delay="1700" class="w-100 px-3 text-black py-2"
-                      style="background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Buy $SHIb</button></a>
+                      style="background: transparent; color: #fff; border: 2px solid #000; font-weight: 700;">Twitter/X</button></a>
                 </div>
               </div>
             </div>
